--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class="row">
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-1.jpg" alt="" class="img-fluid card-img-top"></a>
-          <div class="p-4">
-            <h5> <a href="#" class="text-dark">Art Print 1</a></h5>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-1.jpg" alt="" class="img-fluid card-img-top"></a>
+          <div class="p-4" style="background-color: #60EFE0;">
+            <h5 class="text-dark">Art Print 1</h5>
             <p class="small text-muted mb-0">The artist name</p>
             <p class="small text-muted mb-0">Price £0.00</p>
-            <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+            <div class="d-flex align-items-center justify-content-between">
             </div>
           </div>
         </div>
@@ -33,12 +33,12 @@
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-2.jpg" alt="" class="img-fluid card-img-top"></a>
-          <div class="p-4">
-            <h5> <a href="#" class="text-dark">Art Print 2</a></h5>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-2.jpg" alt="" class="img-fluid card-img-top"></a>
+          <div class="p-4" style="background-color: #60EFE0;">
+            <h5 class="text-dark">Art Print 2</h5>
             <p class="small text-muted mb-0">The artist name</p>
             <p class="small text-muted mb-0">Price £0.00</p>
-            <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+            <div class="d-flex align-items-center justify-content-between">
             </div>
           </div>
         </div>
@@ -47,12 +47,12 @@
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-3.jpg" alt="" class="img-fluid card-img-top"></a>
-          <div class="p-4">
-            <h5> <a href="#" class="text-dark">Art Print 3</a></h5>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-3.jpg" alt="" class="img-fluid card-img-top"></a>
+          <div class="p-4" style="background-color: #60EFE0;">
+            <h5 class="text-dark">Art Print 3</h5>
             <p class="small text-muted mb-0">The artist name</p>
             <p class="small text-muted mb-0">Price £0.00</p>
-            <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+            <div class="d-flex align-items-center justify-content-between">
             </div>
           </div>
         </div>
@@ -61,12 +61,12 @@
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-4.jpg" alt="" class="img-fluid card-img-top"></a>
-          <div class="p-4">
-            <h5> <a href="#" class="text-dark">Art Print 4</a></h5>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-4.jpg" alt="" class="img-fluid card-img-top"></a>
+          <div class="p-4" style="background-color: #60EFE0;">
+            <h5 class="text-dark">Art Print 4</h5>
             <p class="small text-muted mb-0">The artist name</p>
             <p class="small text-muted mb-0">Price £0.00</p>
-            <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+            <div class="d-flex align-items-center justify-content-between">
             </div>
           </div>
         </div>
