--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="row">
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-1.jpg" alt="" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="Images/cody-doherty-AeqlmVWtzFA-unsplash.jpg" alt="" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
             <h5 class="text-dark">Art Print 1</h5>
             <p class="small text-muted mb-0">The artist name</p>
@@ -33,7 +33,7 @@
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-2.jpg" alt="" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="Images/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" alt="" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
             <h5 class="text-dark">Art Print 2</h5>
             <p class="small text-muted mb-0">The artist name</p>
@@ -47,7 +47,7 @@
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-3.jpg" alt="" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="Images/ren-ran-bBiuSdck8tU-unsplash.jpg" alt="" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
             <h5 class="text-dark">Art Print 3</h5>
             <p class="small text-muted mb-0">The artist name</p>
@@ -61,7 +61,7 @@
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="https://bootstrapious.com/i/snippets/sn-gallery/img-4.jpg" alt="" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="Images/zane-lee-XT9iDcKESjE-unsplash.jpg" alt="" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
             <h5 class="text-dark">Art Print 4</h5>
             <p class="small text-muted mb-0">The artist name</p>
