--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-Main-image-gallery
    <!-- Font Awesome -->
 <link
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -25,7 +24,6 @@ rel="stylesheet"
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"
 ></script>
-main
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +34,6 @@ main
  
 </head>
 <body>
-Main-image-gallery
     <!--Main image gallery starts here JUST NEED TO ADD IN CORRECT PRODUCT PAGE LINKS-->
 <div class="container-fluid" style="background-color:#60EFE0 ;">
         <h1>BESTSELLERS</h1>
@@ -44,11 +41,11 @@ Main-image-gallery
     <div class="row">
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="Images/cody-doherty-AeqlmVWtzFA-unsplash.jpg" alt="" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="./Images/cody-doherty-AeqlmVWtzFA-unsplash.jpg" alt="artwork of cactus in desert" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
-            <h5 class="text-dark">Art Print 1</h5>
-            <p class="small text-muted mb-0">The artist name</p>
-            <p class="small text-muted mb-0">Price £0.00</p>
+            <h5 class="text-dark">Art Print 'Cactus in Desert'</h5>
+            <p class="small text-muted mb-0">Cody Doherty</p>
+            <p class="small text-muted mb-0">Price £30.00</p>
             <div class="d-flex align-items-center justify-content-between">
             </div>
           </div>
@@ -58,11 +55,11 @@ Main-image-gallery
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="Images/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" alt="" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="./Images/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" alt="artwork of treetops in forest" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
-            <h5 class="text-dark">Art Print 2</h5>
-            <p class="small text-muted mb-0">The artist name</p>
-            <p class="small text-muted mb-0">Price £0.00</p>
+            <h5 class="text-dark">Art Print 'Forest Treetops'</h5>
+            <p class="small text-muted mb-0">Filip ZrnZevic</p>
+            <p class="small text-muted mb-0">Price £30.00</p>
             <div class="d-flex align-items-center justify-content-between">
             </div>
           </div>
@@ -72,11 +69,11 @@ Main-image-gallery
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="Images/ren-ran-bBiuSdck8tU-unsplash.jpg" alt="" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="./Images/ren-ran-bBiuSdck8tU-unsplash.jpg" alt="artwork of layered rounded leaves" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
-            <h5 class="text-dark">Art Print 3</h5>
-            <p class="small text-muted mb-0">The artist name</p>
-            <p class="small text-muted mb-0">Price £0.00</p>
+            <h5 class="text-dark">Art Print 'Layered Houseplants'</h5>
+            <p class="small text-muted mb-0">Ren Ran</p>
+            <p class="small text-muted mb-0">Price £30.00</p>
             <div class="d-flex align-items-center justify-content-between">
             </div>
           </div>
@@ -86,11 +83,11 @@ Main-image-gallery
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="Images/zane-lee-XT9iDcKESjE-unsplash.jpg" alt="" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href=""><img src="./Images/zane-lee-XT9iDcKESjE-unsplash.jpg" alt="artwork of bird sitting on blossom branch" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
-            <h5 class="text-dark">Art Print 4</h5>
-            <p class="small text-muted mb-0">The artist name</p>
-            <p class="small text-muted mb-0">Price £0.00</p>
+            <h5 class="text-dark">Art Print 'Blossom Bird'</h5>
+            <p class="small text-muted mb-0">Zane Lee</p>
+            <p class="small text-muted mb-0">Price £30.00</p>
             <div class="d-flex align-items-center justify-content-between">
             </div>
           </div>
@@ -101,7 +98,7 @@ Main-image-gallery
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!--Navbar starts here-->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4CC1D9;">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #4CC1D9;">
         <a class="navbar-brand" href="#">Our Shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
