--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ rel="stylesheet"
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!--Navbar starts here-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #4CC1D9;">
-        <a class="navbar-brand" href="#">Our Shop</a>
+        <a class="navbar-brand" href="#">GreatArt</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
