--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@ rel="stylesheet"
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #4CC1D9;">
         <a class="navbar-brand" style="font-size: 40px; font-style: bold;" href="#">GreatArt</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <!--<span class="navbar-toggler-icon"></span>-->
+          <i class="fa-solid fa-bars fa-lg" style="color: black;"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
