--- a/Product1.html
+++ b/Product1.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-lg-2"></div>    
             <div class="col-lg-4">
-                <img id="artprint1" class=img.responsive src="C:\Users\K_Pra\Downloads\cody-doherty-AeqlmVWtzFA-unsplash.jpg" 
+                <img id="artprint1" class=img.responsive src="./Images/cody-doherty-AeqlmVWtzFA-unsplash.jpg" 
                 width="400"
                 height="500"
                 alt="Cactus">
