Tweaked display on product info page and added Arimo font to css

--- a/Product1.html
+++ b/Product1.html
@@ -18,7 +18,7 @@
 <body>
 
         <!--Navbar starts here think we need to update--> 
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4CC1D9;">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #4CC1D9;">
             <a class="navbar-brand" href="#">Our Shop</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -35,15 +35,14 @@
 
 <!--Product starts here-->
     <div class="container-fluid" style="background-color:#60EFE0 ;">
-        <div class="row">
-            <div class="col-lg-2"></div>    
+        <div class="row"> 
             <div class="col-lg-4">
                 <img id="artprint1" class=img.responsive src="./Images/cody-doherty-AeqlmVWtzFA-unsplash.jpg" 
                 width="400"
                 height="500"
                 alt="Cactus">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6" id="productinfo">
                
                 <h1 id="productheader">Dessert Dream Art Print</h1>
                 <h3>£30</h3>
