--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ rel="stylesheet"
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="./Images/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" id="maingalleryimg" alt="artwork of treetops in forest" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href="./Product1.html"><img src="./Images/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" id="maingalleryimg" alt="artwork of treetops in forest" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
             <h5 class="text-dark">Art Print 'Forest Treetops'</h5>
             <p class="small text-muted mb-0">Filip ZrnZevic</p>
@@ -72,7 +72,7 @@ rel="stylesheet"
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="./Images/ren-ran-bBiuSdck8tU-unsplash.jpg" id="maingalleryimg" alt="artwork of layered rounded leaves" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href="./Product1.html"><img src="./Images/ren-ran-bBiuSdck8tU-unsplash.jpg" id="maingalleryimg" alt="artwork of layered rounded leaves" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
             <h5 class="text-dark">Art Print 'Layered Houseplants'</h5>
             <p class="small text-muted mb-0">Ren Ran</p>
@@ -86,7 +86,7 @@ rel="stylesheet"
 
       <!-- Gallery item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-none"><a href=""><img src="./Images/zane-lee-XT9iDcKESjE-unsplash.jpg" id="maingalleryimg" alt="artwork of bird sitting on blossom branch" class="img-fluid card-img-top"></a>
+        <div class="bg-white rounded shadow-none"><a href="./Product1.html"><img src="./Images/zane-lee-XT9iDcKESjE-unsplash.jpg" id="maingalleryimg" alt="artwork of bird sitting on blossom branch" class="img-fluid card-img-top"></a>
           <div class="p-4" style="background-color: #60EFE0;">
             <h5 class="text-dark">Art Print 'Blossom Bird'</h5>
             <p class="small text-muted mb-0">Zane Lee</p>
