Aligned product header product info page

--- a/Product1.html
+++ b/Product1.html
@@ -19,7 +19,7 @@
 
         <!--Navbar starts here think we need to update--> 
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #4CC1D9;">
-            <a class="navbar-brand" href="#">GreatArt</a>
+            <a class="navbar-brand" style="font-size: 40px; font-style: bold;" href="#">GreatArt</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
