--- a/Product1.html
+++ b/Product1.html
@@ -25,7 +25,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Products <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="#">Products</a>
                 <a class="nav-item nav-link" href="#">Services</a>
                 <a class="nav-item nav-link" href="#">Contact</a>
               </div>
